examples/duplicate_test/expected.txt
error: duplicate definition of `x`
  --> input:3:1
  |
3 | let x = 10  // duplicate definition
  | ^^^^^^^^^^ redefined here
2 | let x = 5
  | --------- first defined here
